fix text and spacing in bouncy bats

--- a/src/app/notable-nimbats/notable-nimbats.component.scss
+++ b/src/app/notable-nimbats/notable-nimbats.component.scss
@@ -16,10 +16,6 @@ a {
     color: #3c3218;
 }
 
-.container-fluid { 
-    margin-top: 3vh;
-    margin-bottom: 3vh;
-}
 .light-link { 
     color: #1c180d;
 }
